# LTC2943_driver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github.disabled/workflows/: cmake.yml
.github/workflows/: cmake.yml
src/: CMakeLists.txt  ChipControl.h  LTC2943_config.h  LTC2943_sim.c  LTC2943_sim.h  chip_control.c  chip_control.h  ltc2943_config.h  ltc2943_sim.c  ltc2943_sim.h  main.c  rand_gauss.h
src/output/: ltc2943_config
test/: CMakeLists.txt  main.c  unittest.c  unittests.c
